test/multi_eval.expected
3
Uncaught exception of type SyntaxError: syntax error, unexpected '+', expecting $end at line 4
