test/multi_eval.eh
#!/usr/bin/ehi
eval "x = 3
echo x
# Syntax error will be at line 4 of eval'd code
+1
"
